--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,14 @@
 # Change log
 All notable changes to this project will be documented in this file.
 
-## [1.7.1] -- Unreleased
 
+## [1.9.x] -- Unreleased
+
+	- allow loadRegionDB to accept a character vector or loaded regionDB object
+
+## [1.8.0] -- 2017-10-30
+
+	- rename rnkLO column to rnkOR
 	- merged all past updates from get dev version, into bioconductor git repository
 	- updated readBed to correct 0-based vs 1-based coordinates
 	- enabled testing for either enrichment or depletion via the 'direction' argument
