--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 # Change log
-All notable changes to this project will be documented in this file.
+All notable changes to this project will be documented in this file. Here we
+will document changes to major new releases only (not point releases).
 
 
 ## [1.9.x] -- Unreleased
