--- a/vignettes/choosingUniverse.Rmd
+++ b/vignettes/choosingUniverse.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output:
   BiocStyle::html_document2
 vignette: >
-  %\VignetteIndexEntry{Using LOLA Core}
+  %\VignetteIndexEntry{3. Choosing a Universe}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
