--- a/vignettes/gettingStarted.Rmd
+++ b/vignettes/gettingStarted.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: 
   BiocStyle::html_document
 vignette: >
-  %\VignetteIndexEntry{Getting Started with LOLA}
+  %\VignetteIndexEntry{1. Getting Started with LOLA}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
