--- a/vignettes/usingLOLACore.Rmd
+++ b/vignettes/usingLOLACore.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output:
   BiocStyle::html_document
 vignette: >
-  %\VignetteIndexEntry{Using LOLA Core}
+  %\VignetteIndexEntry{2. Using LOLA Core}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
